--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<a href="src/auctions">hei</a>
+		<a href="/src/auctions/">hei</a>
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
