--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<a href="src/auctions">hei</a>
+		<h1><a href="src/auctions">hei</a></h1>
+
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
