--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<h1><a href="./src/auctions/index.html">hei</a></h1>
+		<h1><a href="src/auctions/index.html">hei</a></h1>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
