--- a/auctions/newListing/index.html
+++ b/auctions/newListing/index.html
@@ -9,7 +9,7 @@
 		<h1 class="text-4xl font-bold text-red-500">Tailwind fungerer!</h1>
 		<p class="text-lg mt-4 text-gray-700">Dette er en test på Tailwind i Vite-prosjektet.</p>
 
-		<h2 class="text-red">All listings</h2>
+		<h2 class="text-red">Create new listing</h2>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
