--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<div id="app"></div>
-		<h1><a href="auctions/index.html">hei</a></h1>
+		<h1><a href="auctions/index.html">All listings</a></h1>
+
+		<h1><a href="auctions/newListing/index.html">Create new listing</a></h1>
+		<h1><a href="auctions/listings/index.html">Listings</a></h1>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
