--- a/auctions/listings/index.html
+++ b/auctions/listings/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tailwind Test</title>
+		<title>Bidify | Listing</title>
 	</head>
 	<body class="bg-gray-100 text-center p-8">
 		<h2 class="text-red">Listings</h2>
