--- a/auctions/index.html
+++ b/auctions/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bidify | All listings</title>
 	</head>
-	<body class="bg-gray-100 text-center p-8">
-		<h2 class="text-red">All listings</h2>
+	<body class="">
+		<div id="navbar-container"></div>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
