--- a/auctions/listings/index.html
+++ b/auctions/listings/index.html
@@ -6,7 +6,7 @@
 		<title>Bidify | Listing</title>
 	</head>
 	<body class="bg-gray-100 text-center p-8">
-		<h2 class="text-red">Listings</h2>
+		<div id="navbar-container"></div>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
