--- a/auctions/newListing/index.html
+++ b/auctions/newListing/index.html
@@ -6,7 +6,7 @@
 		<title>Bidify | Create new listing</title>
 	</head>
 	<body class="bg-gray-100 text-center p-8">
-		<h2 class="text-red">Create new listing</h2>
+		<div id="navbar-container"></div>
 
 		<script type="module" src="/src/main.js"></script>
 	</body>
