--- a/index.html
+++ b/index.html
@@ -6,43 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bidify</title>
 	</head>
-	<body>
-		<nav>
-			<div class="mx-auto flex max-w-7xl items-center justify-between border-solid border-b-red p-3">
-				<!-- Logo -->
-				<a href="#" class="text-xl font-bold text-red">Bidify</a>
-
-				<!-- Meny for mobile -->
-				<div class="block lg:hidden">
-					<button id="menuButton" class="">
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-						</svg>
-					</button>
-				</div>
-
-				<!-- Meny for desktop -->
-				<div class="hidden space-x-4 lg:flex">
-					<a href="auctions/index.html" class="px-3 py-2 text-customblack">All auctions</a>
-					<a href="#" class="px-3 py-2 text-customblack">Profile</a>
-				</div>
-			</div>
-
-			<!-- Mobil meny -->
-			<div id="mobileMenu" class="hidden p-4 lg:hidden">
-				<a href="#" class="block rounded-md px-3 py-2 text-customblack">All auctions</a>
-				<a href="#" class="block rounded-md px-3 py-2 text-customblack">Profile</a>
-			</div>
-		</nav>
-
+	<body class="bg-beige">
+		<div id="navbar-container"></div>
 		<!-- Hero Section -->
 		<section id="hero" class="hero">
 			<div class="hero-content m-7">
 				<p class="text-xs text-brown">Find your next treasure or sell with ease.</p>
-				<h1 class="mt-2 font-semibold text-customblack">Your Auction, Simplified. The marketplace where unique meets ready-to-sell.</h1>
-				<div class="mt-4">
-					<button class="mr-5 w-32 rounded-md bg-red p-3 text-center text-xs font-medium text-beige text-white">Explore Now</button>
-					<button class="w-32 rounded-md bg-white p-3 text-center text-xs font-medium text-brown">Create</button>
+				<h1 class="mt-2 font-semibold text-customblack text-2xl">Your Auction, Simplified. The marketplace where unique meets ready-to-sell.</h1>
+				<div class="mt-6">
+					<button class="mr-5 w-32 rounded-md bg-red p-3 text-center text-s font-medium text-white">Explore Now</button>
+					<button class="w-32 rounded-md bg-white p-3 text-center text-s text-brown border-red">Create</button>
 				</div>
 			</div>
 		</section>
