--- a/auctions/index.html
+++ b/auctions/index.html
@@ -4,10 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bidify | All listings</title>
+		<script type="module" src="/src/api/auth/constants.js"></script>
 	</head>
 	<body class="bg-beige">
 		<div id="navbar-container"></div>
 
+		<h1 class="text-9xl m-7">All listings</h1>
+
+		<div id="listings-container" class="flex flex-wrap"></div>
 		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/src/api/auth/constants.js"></script>
 	</body>
 </html>
