--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		<div id="navbar-container"></div>
 
 		<!-- Hero Section -->
-		<section id="hero" class="hero">
-			<div class="hero-content m-7">
+		<section id="hero" class="hero mx-auto px-4 sm:px-8 md:px-16 lg:px-32">
+			<div class="hero-content m-7 max-w-screen-lg mx-auto text-center">
 				<p class="text-xs text-brown">Find your next treasure or sell with ease.</p>
-				<h1 class="mt-2 font-semibold text-customblack text-2xl">Your Auction, Simplified. The marketplace where unique meets ready-to-sell.</h1>
-				<div class="mt-6">
+				<h1 class="mt-2 font-semibold text-customblack text-2xl sm:text-3xl md:text-4xl lg:text-5xl md:max-w-3xl md:w-full md:mx-auto md:leading-relaxed">
+					Your Auction, Simplified. The marketplace where unique meets ready-to-sell.
+				</h1>
+				<div class="mt-6 flex justify-center">
 					<button class="mr-5 w-32 rounded-md bg-red p-3 text-center text-s font-medium text-white">Explore Now</button>
 					<button class="w-32 rounded-md bg-white p-3 text-center text-s text-brown border-red">Create</button>
 				</div>
@@ -25,20 +27,36 @@
 			<h2 class="mb-3 text-xl font-semibold">Ending Soon</h2>
 
 			<!-- auctions ending soon-->
-			<div class="w-60 overflow-hidden rounded-md border border-sky-500 bg-white">
-				<img src="https://images.unsplash.com/photo-1652536161402-533bf82822bf?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-				<p class="text-red">Vintage Wheels Pro 8</p>
-				<hr class="my-4 border-t-2 border-dotted border-gray" />
-				<div class="flex items-center justify-between p-2 text-center">
-					<div>
-						<p>Enda mere tekst</p>
-						<p>Masse mere tekst</p>
+
+			<div class="flex gap-6">
+				<div class="w-60 overflow-hidden rounded-md borde bg-white">
+					<img src="https://images.unsplash.com/photo-1652536161402-533bf82822bf?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+					<p class="text-red mt-3 ml-3 text-base font-bold">Vintage Wheels Pro 8</p>
+					<hr class="my-4 border-t-2 border-dotted border-gray" />
+					<div class="flex items-center justify-between p-3">
+						<div>
+							<p class="text-xs text-brown">Bids: 5</p>
+							<p class="text-xs font-semibold text-customblack mt-1">Nov, 17, 6:15pm</p>
+						</div>
+						<div class="bg-brown rounded-full p-0.5 w-[55px]"><p class="text-center font-bold text-[12px] text-white p-0.5">$ 550</p></div>
 					</div>
-					<p class="h-5 content-center rounded-full bg-brown p-2 align-middle text-[12px] text-xs text-white">$ 500</p>
+				</div>
+
+				<div class="w-60 overflow-hidden rounded-md borde bg-white">
+					<img src="https://images.unsplash.com/photo-1652536161402-533bf82822bf?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+					<p class="text-red mt-3 ml-3 text-base font-bold">Vintage Wheels Pro 8</p>
+					<hr class="my-4 border-t-2 border-dotted border-gray" />
+					<div class="flex items-center justify-between p-3">
+						<div>
+							<p class="text-xs text-brown">Bids: 5</p>
+							<p class="text-xs font-semibold text-customblack mt-1">Nov, 17, 6:15pm</p>
+						</div>
+						<div class="bg-brown rounded-full p-0.5 w-[55px]"><p class="text-center font-bold text-[12px] text-white p-0.5">$ 550</p></div>
+					</div>
 				</div>
 			</div>
 
-			<h2 class="mb-3 text-xl font-semibold">Newest Autions</h2>
+			<h2 class="mb-3 text-4xl font-semibold">Newest Autions</h2>
 		</main>
 
 		<script type="module" src="/src/main.js"></script>
