--- a/auth/profile/index.html
+++ b/auth/profile/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bidify | All listings</title>
 	</head>
-	<body class="">
+	<body class="bg-beige">
 		<div id="navbar-container"></div>
 
 		<script type="module" src="/src/main.js"></script>
