--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Bidify</title>
+		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/src/api/auth/constants.js"></script>
 	</head>
 	<body class="bg-beige">
 		<div id="navbar-container"></div>
@@ -24,41 +26,9 @@
 		</section>
 
 		<main class="m-9">
-			<h2 class="mb-3 text-xl font-semibold">Ending Soon</h2>
+			<h2 class="mb-3 text-xl font-semibold">Listings</h2>
 
-			<!-- auctions ending soon-->
-
-			<div class="flex gap-6">
-				<div class="w-60 overflow-hidden rounded-md borde bg-white">
-					<img src="https://images.unsplash.com/photo-1652536161402-533bf82822bf?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-					<p class="text-red mt-3 ml-3 text-base font-bold">Vintage Wheels Pro 8</p>
-					<hr class="my-4 border-t-2 border-dotted border-gray" />
-					<div class="flex items-center justify-between p-3">
-						<div>
-							<p class="text-xs text-brown">Bids: 5</p>
-							<p class="text-xs font-semibold text-customblack mt-1">Nov, 17, 6:15pm</p>
-						</div>
-						<div class="bg-brown rounded-full p-0.5 w-[55px]"><p class="text-center font-bold text-[12px] text-white p-0.5">$ 550</p></div>
-					</div>
-				</div>
-
-				<div class="w-60 overflow-hidden rounded-md borde bg-white">
-					<img src="https://images.unsplash.com/photo-1652536161402-533bf82822bf?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
-					<p class="text-red mt-3 ml-3 text-base font-bold">Vintage Wheels Pro 8</p>
-					<hr class="my-4 border-t-2 border-dotted border-gray" />
-					<div class="flex items-center justify-between p-3">
-						<div>
-							<p class="text-xs text-brown">Bids: 5</p>
-							<p class="text-xs font-semibold text-customblack mt-1">Nov, 17, 6:15pm</p>
-						</div>
-						<div class="bg-brown rounded-full p-0.5 w-[55px]"><p class="text-center font-bold text-[12px] text-white p-0.5">$ 550</p></div>
-					</div>
-				</div>
-			</div>
-
-			<h2 class="mb-3 text-4xl font-semibold">Newest Autions</h2>
+			<div id="listings-container" class="flex flex-wrap"></div>
 		</main>
-
-		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
