added register form

--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -6,6 +6,7 @@
 		<title>Document</title>
 	</head>
 	<body class="bg-beige">
+		<div id="navbar-container"></div>
 		<main class="m-9">
 			<section class="bg-gray-50">
 				<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
@@ -114,6 +115,7 @@
 				</div>
 			</section>
 		</main>
-		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="../../src/main.js"></script>
+		<script src="../../src/api/auth/register.js"></script>
 	</body>
 </html>
