added module type

--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -116,6 +116,6 @@
 			</section>
 		</main>
 		<script type="module" src="../../src/main.js"></script>
-		<script src="../../src/api/auth/register.js"></script>
+		<script type="module" src="../../src/api/auth/register.js"></script>
 	</body>
 </html>
