--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -26,6 +26,6 @@
 				</div>
 			</form>
 		</div>
-		<script type="module" src="../../src/main.js"></script>
+		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
