--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="flex flex-col sm:flex-row justify-between max-w mt-10 mb-10 gap-4">
 				<!-- Dropdown Filter -->
 				<div class="">
-					<select class="w-full sm:w-40 px-4 py-2 border border-gray rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-brown focus:border-brown">
+					<select id="sort-dropdown" class="w-full sm:w-40 px-4 py-2 border border-gray rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-brown focus:border-brown">
 						<option value="newest">Newest</option>
 						<option value="oldest">Oldest</option>
 					</select>
