--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -5,27 +5,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Login</title>
 	</head>
-	<body class="bg-beige flex items-center justify-center h-screen">
-		<div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
-			<h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login</h2>
-			<form action="#" method="POST">
-				<div class="mb-4">
-					<label for="email" class="block text-sm font-medium text-gray-600">Email</label>
-					<input type="email" id="email" name="email" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
-				</div>
 
-				<div class="mb-6">
-					<label for="password" class="block text-sm font-medium text-gray-600">Password</label>
-					<input type="password" id="password" name="password" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
-				</div>
+	<body class="bg-beige">
+		<div id="navbar-container"></div>
+		<div class="bg-beige flex items-center justify-center h-screen">
+			<div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
+				<h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login</h2>
+				<form action="#" method="POST">
+					<div class="mb-4">
+						<label for="email" class="block text-sm font-medium text-gray-600">Email</label>
+						<input type="email" id="email" name="email" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
+					</div>
 
-				<button type="submit" class="w-full py-3 bg-red text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-4 focus:ring-red">Login</button>
+					<div class="mb-6">
+						<label for="password" class="block text-sm font-medium text-gray-600">Password</label>
+						<input type="password" id="password" name="password" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
+					</div>
 
-				<div class="mt-4 text-center">
-					<p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-red hover:underline">Sign up</a></p>
-				</div>
-			</form>
+					<button type="submit" class="w-full py-3 bg-red text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-4 focus:ring-red">Login</button>
+
+					<div class="mt-4 text-center">
+						<p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-red hover:underline">Sign up</a></p>
+					</div>
+				</form>
+			</div>
+			<script type="module" src="../../src/main.js"></script>
+			<script type="module" src="../../src/api/auth/login.js"></script>
 		</div>
-		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
