--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -11,15 +11,15 @@
 		<div class="bg-beige flex items-center justify-center h-screen">
 			<div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
 				<h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login</h2>
-				<form action="#" method="POST">
+				<form id="loginForm" method="POST">
 					<div class="mb-4">
 						<label for="email" class="block text-sm font-medium text-gray-600">Email</label>
 						<input type="email" id="email" name="email" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
 					</div>
 
 					<div class="mb-6">
-						<label for="password" class="block text-sm font-medium text-gray-600">Password</label>
-						<input type="password" id="password" name="password" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
+						<label for="pass" class="block text-sm font-medium text-gray-600">Password</label>
+						<input type="password" id="pass" name="password" class="mt-1 p-3 w-full border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red" required />
 					</div>
 
 					<button type="submit" class="w-full py-3 bg-red text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-4 focus:ring-red">Login</button>
@@ -29,8 +29,8 @@
 					</div>
 				</form>
 			</div>
-			<script type="module" src="../../src/main.js"></script>
-			<script type="module" src="../../src/api/auth/login.js"></script>
 		</div>
+		<script type="module" src="../../src/main.js"></script>
+		<script type="module" src="../../src/api/auth/login.js"></script>
 	</body>
 </html>
