fixed styling on modal

--- a/auth/profile/index.html
+++ b/auth/profile/index.html
@@ -66,8 +66,8 @@
 				</div>
 
 				<div class="flex justify-end">
-					<button id="cancelBtn" class="bg-gray-500 text-white px-4 py-2 rounded mr-2">Cancel</button>
-					<button id="updateBtn" class="bg-blue-500 text-white px-4 py-2 rounded">Update</button>
+					<button id="cancelBtn" class="bg-gray-500 text-customblack px-4 py-2 rounded mr-2">Cancel</button>
+					<button id="updateBtn" class="bg-red text-white px-4 py-2 rounded">Update</button>
 				</div>
 			</div>
 		</div>
