updated create listing form

--- a/auctions/newListing/index.html
+++ b/auctions/newListing/index.html
@@ -10,7 +10,7 @@
 		<div id="navbar-container"></div>
 
 		<main class="m-9">
-			<section class="bg-gray-50">
+			<section class="">
 				<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
 					<div class="sm:mx-auto sm:w-full sm:max-w-sm">
 						<h2 class="mt-10 text-center text-2xl font-bold tracking-tight text-customblack">Create a Listing</h2>
