--- a/auctions/listingDetail/index.html
+++ b/auctions/listingDetail/index.html
@@ -14,7 +14,7 @@
 
 		<div class="max-w-4xl mx-auto p-6 flex justify-end">
 			<input type="number" id="bidAmountInput" class="border rounded-md p-2" placeholder="Enter bid amount" min="0" />
-			<button id="placeBidBtn" class="w-32 rounded-md bg-red p-3 text-center text-s font-medium text-white hidden">Place bid</button>
+			<button id="placeBidBtn" class="ml-4 w-32 rounded-md bg-red p-3 text-center text-s font-medium text-white hidden">Place bid</button>
 			<p id="loginMessage" class="text-red text-sm font-medium hidden">Log in to place a bid.</p>
 			<p id="bidErrorMessage" class="text-red text-sm font-medium hidden">Please enter a valid bid amount.</p>
 			<p id="bidSuccessMessage" class="text-green-500 text-sm font-medium hidden">Bid placed successfully!</p>
