--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
 			<div class="hero-content m-7 max-w-screen-lg mx-auto text-center">
 				<p class="text-xs text-brown">Find your next treasure or sell with ease.</p>
 				<h1 class="mt-2 font-semibold text-customblack text-2xl sm:text-3xl md:text-4xl lg:text-5xl md:max-w-3xl md:w-full md:mx-auto md:leading-relaxed">
-					Your Auction, Simplified. The marketplace where unique meets ready-to-sell.
+					Your auction,<span class="text-red"> simplified.</span> The marketplace where unique meets ready-to-sell.
 				</h1>
-				<div class="mt-6 flex justify-center">
-					<button class="mr-5 w-32 rounded-md bg-red p-3 text-center text-s font-medium text-white">Explore Now</button>
-					<button class="w-32 rounded-md bg-white p-3 text-center text-s text-brown border-red">Create</button>
-				</div>
 			</div>
 		</section>
 
