--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -25,7 +25,7 @@
 					<button type="submit" class="w-full py-3 bg-red text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-4 focus:ring-red">Login</button>
 
 					<div class="mt-4 text-center">
-						<p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-red hover:underline">Sign up</a></p>
+						<p class="text-sm text-gray-600">Don't have an account? <a href="./auth/register/index.html" class="text-red hover:underline">Sign up</a></p>
 					</div>
 				</form>
 			</div>
