--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -108,7 +108,7 @@
 							</button>
 							<p class="mt-10 text-center text-sm text-gray">
 								Already have an account?
-								<a href="/index.html" class="font-semibold text-red hover:text-brown">Login here</a>
+								<a href="/auth/login/index.html" class="font-semibold text-red hover:text-brown">Login here</a>
 							</p>
 						</form>
 					</div>
