moved placebid to listing folder

--- a/auctions/listingDetail/index.html
+++ b/auctions/listingDetail/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Listing Detail</title>
+		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="../../src/api/auth/listingDetail.mjs"></script>
+		<script type="module" src="../../src/listings/placeBid.mjs"></script>
 	</head>
 	<body class="bg-beige">
 		<div id="navbar-container"></div>
@@ -26,9 +29,5 @@
 			<div class="max-w-4xl mx-auto p-6" id="bids-container"></div>
 			<!-- Bids will be injected here -->
 		</div>
-
-		<script type="module" src="/src/main.js"></script>
-		<script type="module" src="../../src/api/auth/listingDetail.mjs"></script>
-		<script type="module" src="../../src/api/auth/placeBid.mjs"></script>
 	</body>
 </html>
