--- a/auth/profile/index.html
+++ b/auth/profile/index.html
@@ -30,7 +30,7 @@
 				</div>
 
 				<h5 id="username" class="mb-1 text-xl font-medium text-gray-900 mt-4">User Name</h5>
-				<span id="userBio" class="text-sm m-3 text-gray-500">User Bio</span>
+				<span id="userBio" class="text-sm text-gray-500">User Bio</span>
 
 				<div class="mt-4">
 					<span class="text-lg font-semibold">Total Credit:</span>
